@@ -1,3 +1,9 @@
+2009-04-03  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	Patch contributed by  Gabor Kelemen <kelemg@gnome.hu>
+	* src/callbacks.c: (on_about_activate):
+	(#577714) - Licence text not translatable
+
 2009-03-08  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* src/baobab-prefs.c: (fill_props_model):
